--- a/login/app/src/views/home/login.ejs
+++ b/login/app/src/views/home/login.ejs
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/home/login.js"></script>
+    <script src="/js/home/login.js" defer></script>
     <title>Login</title>
 </head>
 
 <body>
-    <input type="text" placeholder="ID"><br>
-    <input type="text" placeholder="PW"><br>
+    <input id="id" type="text" placeholder="ID"><br>
+    <input id="password" type="text" placeholder="PW"><br>
     <button>Login</button>
 </body>
 
