--- a/login/app/src/views/home/login.ejs
+++ b/login/app/src/views/home/login.ejs
@@ -5,13 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/home/login.js" defer></script>
+    <link rel="stylesheet" href="/css/home/login.css">
     <title>Login</title>
 </head>
 
 <body>
-    <input id="id" type="text" placeholder="ID"><br>
-    <input id="password" type="text" placeholder="PW"><br>
-    <button>Login</button>
+    <div class="login-page">
+        <div class="form">
+          <form class="login-form">
+            <input id="id" type="text" placeholder="ID"/>
+            <input id="password" type="password" placeholder="PW"/>
+            <button>login</button>
+            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+          </form>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
