--- a/login/app/src/views/home/register.ejs
+++ b/login/app/src/views/home/register.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <link rel="stylesheet" href="/css/home/login.css">
     <title>Register</title>
 </head>
@@ -17,7 +17,7 @@
             <input id="name" type="text" placeholder="name"/>
             <input id="password" type="password" placeholder="PW"/>
             <input id="confirm-password" type="password" placeholder="PW Confirm"/>
-            <button>Sign Up</button>
+            <p id ="button">Sign Up</p>
             <p class="message">Already registered? <a href="/login"> Login</a></p>
           </form>
         </div>
